# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
cmake/: doctest.cmake
src/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  input.cpp  input.h  main.cpp  minimax.cpp  minimax.h
test/: CMakeLists.txt  test_board.cpp
